# agent-matchmaking

./: LICENSE  README.md  agent_matchmaking_whitepaper.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
agent_matchmaking/: __init__.py  cli.py  discovery.py  federation.py  matching.py  pricing.py  ranking.py  schema.py  store.py  ucp.py
tests/: test_cli.py  test_discovery.py  test_matching.py  test_pricing.py  test_ranking.py  test_schema.py  test_store.py  test_ucp.py
typescript/: README.md  package.json
typescript/src/: discovery.ts  federation.ts  index.ts  matching.ts  pricing.ts  ranking.ts  schema.ts  store.ts  ucp.ts
typescript/tests/: amp.test.ts
